# bootstraps

./: .gitignore  .gitmodules  README.md
cmake/: README.md
cmake/msp430-baremetal-hal/src/: .kdev_include_paths  CMakeLists.txt  README.md  default-install.cmake
cmake/msp430-baremetal-hal/src/application/: CMakeLists.txt  devicemap.h  main.c
cmake/msp430-baremetal-hal/src/bsp/: board.h  board_lp5529.h  board_pum.h  board_pum_lp5529.h  uc_pum.h  uc_pum_lp5529.h
cmake/msp430-baremetal-hal/src/doc/: derive.md  design.md  index.md  instance.cmake  thirdparty.md
cmake/msp430-baremetal-hal/src/hal-uc/: hal_uc.h  hal_uc_core.h  hal_uc_gpio.h  hal_uc_map.h  hal_uc_types.h  hal_uc_uart.h
cmake/msp430-baremetal-hal/src/peripherals/: CMakeLists.txt  core_impl.c  core_impl.h  gpio_impl.c  gpio_impl.h  uart_handlers.c  uart_handlers.h  uart_impl.c  uart_impl.h  uc_map_impl.h  uc_types_impl.h
cmake/msp430-baremetal-hal/src/subsystem/: bc_iface.h
cmake/msp430-baremetal/src/: .kdev_include_paths  CMakeLists.txt  main.c  src.kdev4
cmake/msp430-baremetal/src/.kdev4/: src.kdev4
cmake/msp430-baremetal/src/application/: CMakeLists.txt  main.c
cmake/msp430-baremetal/src/drivers/: CMakeLists.txt  bc_uart.h  core_init.h
cmake/msp430-hal-usb/src/: .kdev_include_paths  CMakeLists.txt
cmake/msp430-hal-usb/src/application/: CMakeLists.txt  main.c
cmake/msp430-hal-usb/src/bsp/: CMakeLists.txt  board.c  board_pum.h  board_pum_lp5529.h  devicemap.h  uc_pum.h  uc_pum_lp5529.h  uc_types.h
cmake/msp430-hal-usb/src/doc/: Doxyfile.in  hal.md  structure.md  thirdparty.md  tools.md
cmake/msp430-hal-usb/src/doc/scripts/: igsimplify.py
cmake/msp430-hal-usb/src/hal-uc/: hal_uc.h  hal_uc_gpio.h  hal_uc_uart.h  hal_uc_usb.h
cmake/msp430-hal-usb/src/lib/: CMakeLists.txt  bytebuf.c  bytebuf.h  prbs.c  prbs.h  printf.h  ucdm.c  ucdm.h
cmake/msp430-hal-usb/src/peripherals/: CMakeLists.txt  core_impl.c  core_impl.h  gpio_impl.h  uart_impl.c  uart_impl.h  usb_impl.h
cmake/msp430-hal-usb/src/peripherals/USB_API/: CMakeLists.txt  README.md
cmake/msp430-hal-usb/src/peripherals/USB_API/USB_CDC_API/: UsbCdc.c  UsbCdc.h
cmake/msp430-hal-usb/src/peripherals/USB_API/USB_Common/: usb.c  usb.h  usbdma.c
cmake/msp430-hal-usb/src/peripherals/USB_API/USB_HID_API/: UsbHid.c  UsbHidReq.c
cmake/msp430-hal-usb/src/peripherals/USB_API/USB_MSC_API/: UsbMsc.h  UsbMscReq.c  UsbMscScsi.c  UsbMscScsi.h  UsbMscStateMachine.c
cmake/msp430-hal-usb/src/peripherals/USB_API/USB_PHDC_API/: UsbPHDC.c
cmake/msp430-hal-usb/src/peripherals/USB_app/: CMakeLists.txt  usbConstructs.c  usbConstructs.h  usbEventHandling.c
cmake/msp430-hal-usb/src/peripherals/USB_config/: CMakeLists.txt  MSP430_CDC.inf  UsbIsr.c  descriptors.c  descriptors.h
cmake/msp430-hal-usb/src/peripherals/driverlib/: README.md
cmake/msp430-hal-usb/src/peripherals/driverlib/MSP430F5xx_6xx/: CMakeLists.txt  adc10_a.h  adc12_a.c  adc12_a.h  aes.c  aes.h  battbak.h  comp_b.c  dac12_a.h  eusci_a_spi.c  eusci_a_spi.h  eusci_b_spi.c  eusci_b_spi.h  eusci_spi.h  eusci_uart.c  eusci_uart.h  flashctl.c  ldopwr.h  mpy32.c  mpy32.h  pmap.c  pmm.h  ram.c  rtc_a.h  rtc_b.c  sfr.c  sysctl.h  tec.c  tec.h  timer_b.h  timer_d.h  ucs.c  ucs.h  usci_a_spi.c  usci_a_uart.c  usci_a_uart.h  usci_b_i2c.c  usci_b_i2c.h  usci_b_spi.c  usci_i2c.c  (+3 more)
cmake/msp430-hal-usb/src/peripherals/driverlib/MSP430F5xx_6xx/inc/: hw_memmap.h
cmake/msp430-hal-usb/src/subsystem/: CMakeLists.txt  bc_iface.h  bc_iface_uart.h  bc_iface_usb.c  bc_iface_usb.h  subsystems.h
cmake/msp430-hal/src/: .kdev_include_paths  CMakeLists.txt  src.kdev4
cmake/msp430-hal/src/.kdev4/: src.kdev4
cmake/msp430-hal/src/application/: CMakeLists.txt  main.c
cmake/msp430-hal/src/bsp/: CMakeLists.txt  board_pum.h  board_pum_lp5529.h  uc_pum.h  uc_pum_lp5529.h  uc_types.h
cmake/msp430-hal/src/doc/: CMakeLists.txt  Doxyfile.in  structure.md
cmake/msp430-hal/src/hal-uc/: hal_uc.h  hal_uc_core.h  hal_uc_uart.h
cmake/msp430-hal/src/lib/: CMakeLists.txt  bytebuf.c  bytebuf.h  prbs.h  printf.c  printf.h
cmake/msp430-hal/src/peripherals/: CMakeLists.txt  core_impl.c  core_impl.h  uart_impl.c  uart_impl.h
cmake/msp430-hal/src/peripherals/driverlib/: CMakeLists.txt
cmake/msp430-hal/src/peripherals/driverlib/MSP430F5xx_6xx/: CMakeLists.txt  adc10_a.c  battbak.c  comp_b.h  crc.h  dac12_a.c  dma.c  dma.h  driverlib.h  eusci_a_uart.c  eusci_a_uart.h  eusci_b_i2c.c  eusci_b_i2c.h  eusci_i2c.c  eusci_i2c.h  eusci_spi.c  flashctl.h  ldopwr.c  pmap.h  pmm.c  ref.h  rtc_a.c  rtc_b.h  rtc_c.c  rtc_c.h  sd24_b.c  sd24_b.h  sysctl.c  timer_a.h  timer_b.c  timer_d.c  usci_a_spi.h  usci_b_spi.h  usci_spi.h  usci_uart.c  usci_uart.h  wdt_a.h
cmake/msp430-hal/src/peripherals/driverlib/MSP430F5xx_6xx/inc/: hw_regaccess.h
cmake/msp430-hal/src/subsystem/: bc_iface.h
minimal/msp430-baremetal/msp430-gcc/: main.c  makefile
minimal/msp430-baremetal/msp430-gcc/drivers/: HAL_PMM.h  bc_uart.c  core_init.c  tick_timer.c  tick_timer.h
software/: twisted-pyqt4-guiqwt.md
