CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(SET CMP0007 NEW)


PROJECT(msp430-baremetal-hal C)
SET(msp430-baremetal-hal_VERSION_MAJOR 0)
SET(msp430-baremetal-hal_VERSION_MINOR 1)
SET(msp430-baremetal-hal_VERSION_PATCH 0)
SET(msp430-baremetal-hal_VERSION_TWEAK 0)
SET(TMP_PROJECT_DESCRIPTION "Hardware Abstraction Layers for msp430"
        CACHE STRING "Project Description")

SET(DOC_HTML_INSTALL	True)

INCLUDE(doc/instance.cmake)

INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/bsp ${INCLUDE_DIRECTORIES}")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/hal-uc ${INCLUDE_DIRECTORIES}")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/peripherals ${INCLUDE_DIRECTORIES}")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/subsystem ${INCLUDE_DIRECTORIES}")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/application ${INCLUDE_DIRECTORIES}")

ADD_SUBDIRECTORY(doc)
ADD_SUBDIRECTORY(peripherals)
ADD_SUBDIRECTORY(hal-uc)
ADD_SUBDIRECTORY(bsp)
ADD_SUBDIRECTORY(subsystem)
ADD_SUBDIRECTORY(application)

INSTALL(SCRIPT default-install.cmake)
