CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(SET CMP0007 NEW)


PROJECT(msp430-hal-usb C)
SET(${CMAKE_PROJECT_NAME}_VERSION_MAJOR 0)
SET(${CMAKE_PROJECT_NAME}_VERSION_MINOR 2)
SET(${CMAKE_PROJECT_NAME}_VERSION_PATCH 0)
SET(${CMAKE_PROJECT_NAME}_VERSION_TWEAK 0)
SET(TMP_PROJECT_DESCRIPTION "Hardware Abstraction Layers for msp430"
        CACHE STRING "Project Description")

SET(SUPPORTED_DEVICES "msp430f5529;msp430f5521" 
	CACHE STRING "Supported Target Devices")

SET(DOC_HTML_INSTALL	True)
INCLUDE(doc/instance.cmake)

SET(EXTRA_LINKER_FLAGS "-T ${CMAKE_SOURCE_DIR}/peripherals/USB_API/msp430USB.ld")

INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/bsp ${INCLUDE_DIRECTORIES}")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/lib ${INCLUDE_DIRECTORIES}")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/hal-uc ${INCLUDE_DIRECTORIES}")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/peripherals ${INCLUDE_DIRECTORIES}")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/subsystem ${INCLUDE_DIRECTORIES}")

# This is a bad include. It was needed to get USB-API running quickly, and should be changed.
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/peripherals/driverlib/MSP430F5xx_6xx/ ${INCLUDE_DIRECTORIES}")

INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/application ${INCLUDE_DIRECTORIES}")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/peripherals/USB_config ${INCLUDE_DIRECTORIES}")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/peripherals/USB_app ${INCLUDE_DIRECTORIES}")

ADD_SUBDIRECTORY(doc)
ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(peripherals)
ADD_SUBDIRECTORY(hal-uc)
ADD_SUBDIRECTORY(bsp)
ADD_SUBDIRECTORY(subsystem)
ADD_SUBDIRECTORY(application)

INSTALL(SCRIPT default-install.cmake)
