CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(SET CMP0007 NEW)


PROJECT(msp430-gcc-primitives C)
SET(msp430-gcc-primitives_VERSION_MAJOR 0)
SET(msp430-gcc-primitives_VERSION_MINOR 1)
SET(msp430-gcc-primitives_VERSION_PATCH 0)
SET(msp430-gcc-primitives_VERSION_TWEAK 0)
SET(TMP_PROJECT_DESCRIPTION "Hardware Abstraction Layers for msp430"
        CACHE STRING "Project Description")

SET(SUPPORTED_DEVICES "msp430f5529;msp430f5521" 
	CACHE STRING "Supported Target Devices")

SET(DOC_HTML_INSTALL	True)
SET(DOC_HTML_TARGET "/var/www/docs/public_html/${CMAKE_PROJECT_NAME}")

INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/bsp ${INCLUDE_DIRECTORIES}")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/lib ${INCLUDE_DIRECTORIES}")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/hal-uc ${INCLUDE_DIRECTORIES}")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/peripherals ${INCLUDE_DIRECTORIES}")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/subsystem ${INCLUDE_DIRECTORIES}")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/application ${INCLUDE_DIRECTORIES}")

ADD_SUBDIRECTORY(doc)
ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(peripherals)
ADD_SUBDIRECTORY(hal-uc)
ADD_SUBDIRECTORY(bsp)
ADD_SUBDIRECTORY(subsystem)
ADD_SUBDIRECTORY(application)

INSTALL(SCRIPT default-install.cmake)
