
FIND_PACKAGE(Doxygen)

IF(DOXYGEN_FOUND)
        IF(${USE_OTHER_DOXYGEN})
            SET(DOXYGEN_EXECUTABLE ${OVERRIDE_DOXYGEN})
        ENDIF(${USE_OTHER_DOXYGEN})
        
	SET(TMP_PROJECT_VERSION ${${CMAKE_PROJECT_NAME}_VERSION_MAJOR}.${${CMAKE_PROJECT_NAME}_VERSION_MINOR}.${${CMAKE_PROJECT_NAME}_VERSION_PATCH}.${${CMAKE_PROJECT_NAME}_VERSION_TWEAK})
        
        SET(TMP_PP_INCL_DIRS)
        GET_PROPERTY(dirs DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY INCLUDE_DIRECTORIES)
        FOREACH(dir ${dirs})
            SET(TMP_PP_INCL_DIRS "${TMP_PP_INCL_DIRS} ${dir}")
        ENDFOREACH(dir ${dirs})
        
	CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in
			${CMAKE_CURRENT_BINARY_DIR}/Doxyfile @ONLY)
	
	ADD_CUSTOM_TARGET(doc	${DOXYGEN_EXECUTABLE}
			${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
			WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
			COMMENT "Generating documentation with Doxygen" VERBATIM)

	ADD_CUSTOM_TARGET(doc-pdf	make
			WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/latex
			COMMENT "Generating Doxygen PDF" VERBATIM
			DEPENDS doc)
	
	IF(${DOC_HTML_INSTALL})
		ADD_CUSTOM_TARGET(doc-install	
			rsync -azh --partial --info=progress2 --delete 
			${CMAKE_CURRENT_BINARY_DIR}/html/ ${DOC_HTML_TARGET}
			WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
			COMMENT "Publishing Doxygen HTML" VERBATIM
			DEPENDS doc)
	ENDIF(${DOC_HTML_INSTALL})
ENDIF(DOXYGEN_FOUND)
